--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "type-check": "vue-tsc --noEmit --composite false",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "prepare": "node ./prepare.js"
   },
   "lint-staged": {
@@ -21,17 +23,22 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/vue": "^8.1.0",
     "@vitejs/plugin-vue": "^5.1.4",
+    "@vitest/coverage-v8": "^2.1.8",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.29.0",
     "globals": "^15.11.0",
     "husky": "^9.1.6",
+    "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.9.0",
     "vite": "^5.4.8",
+    "vitest": "^2.1.8",
     "vue-tsc": "^2.1.6"
   }
 }
